[gd_scene load_steps=13 format=2]

[ext_resource path="res://Geography/Planet.tscn" type="PackedScene" id=1]
[ext_resource path="res://ActiveGame.gd" type="Script" id=2]
[ext_resource path="res://InputHandler.gd" type="Script" id=3]
[ext_resource path="res://UI/SelectionWheel.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/HUD.gd" type="Script" id=5]
[ext_resource path="res://UI/PlayerPanels.gd" type="Script" id=6]
[ext_resource path="res://UI/MenuPanel.gd" type="Script" id=7]
[ext_resource path="res://UI/Motifs/InventoryMotif.tscn" type="PackedScene" id=8]
[ext_resource path="res://UI/BuildMenu.gd" type="Script" id=9]
[ext_resource path="res://UI/Texture.png" type="Texture" id=10]
[ext_resource path="res://UI/Selector32.png" type="Texture" id=11]
[ext_resource path="res://UI/ObjectInteraction.gd" type="Script" id=12]

[node name="ActiveGame" type="Node2D"]
script = ExtResource( 2 )

[node name="InputHandler" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Planet" parent="." instance=ExtResource( 1 )]

[node name="Inventory" parent="Planet/Characters/Player" index="5"]
data = {
"Dirt": 8,
"Shovel_Prototype": 1,
"Stone": 2
}

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 5 )

[node name="CameraLevel" type="Label" parent="HUD"]
margin_right = 101.0
margin_bottom = 14.0
text = "Camera Level: X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TargetedBlock" type="Label" parent="HUD"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -7.0
margin_right = 120.0
margin_bottom = 7.0
text = "Targeted Block: ??? [Level]"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToPlace" type="Label" parent="HUD"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -40.0
margin_right = 67.0
margin_bottom = -8.0
text = "TO PLACE: X x []"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="HUD/ToPlace"]
margin_left = 96.0
margin_right = 128.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 16, 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToolSelect" parent="HUD" instance=ExtResource( 4 )]
visible = false
slices = [ "Hand", "Shovel", "Pick", "Axe", "Bottle", "Rod" ]
iconsPath = "Items/Tools/Tool_Prototypes.png"

[node name="BuildMenu" type="Control" parent="HUD"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -256.0
margin_right = 356.0
margin_bottom = 284.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="HUD/BuildMenu"]
anchor_bottom = 1.0
margin_right = 384.0
texture = ExtResource( 10 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="Control" parent="HUD/BuildMenu/NinePatchRect"]
margin_right = 384.0
margin_bottom = 64.0

[node name="Terrains" type="Control" parent="HUD/BuildMenu/NinePatchRect"]
margin_top = 64.0
margin_right = 384.0
margin_bottom = 192.0

[node name="Label" type="Label" parent="HUD/BuildMenu/NinePatchRect/Terrains"]
margin_right = 121.0
margin_bottom = 32.0
text = "Terrain/Structures"
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/BuildMenu/NinePatchRect/Terrains"]
margin_top = 32.0
margin_right = 384.0
margin_bottom = 96.0
custom_constants/separation = 8
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="HUD/BuildMenu/NinePatchRect/Terrains/HBoxContainer"]
margin_left = 16.0
margin_right = 80.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
color = Color( 0.658824, 0.658824, 0.658824, 1 )

[node name="ColorRect2" type="ColorRect" parent="HUD/BuildMenu/NinePatchRect/Terrains/HBoxContainer"]
margin_left = 88.0
margin_right = 152.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
color = Color( 0.658824, 0.658824, 0.658824, 1 )

[node name="ColorRect3" type="ColorRect" parent="HUD/BuildMenu/NinePatchRect/Terrains/HBoxContainer"]
margin_left = 160.0
margin_right = 224.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
color = Color( 0.658824, 0.658824, 0.658824, 1 )

[node name="ColorRect4" type="ColorRect" parent="HUD/BuildMenu/NinePatchRect/Terrains/HBoxContainer"]
margin_left = 232.0
margin_right = 296.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
color = Color( 0.658824, 0.658824, 0.658824, 1 )

[node name="ColorRect5" type="ColorRect" parent="HUD/BuildMenu/NinePatchRect/Terrains/HBoxContainer"]
margin_left = 304.0
margin_right = 368.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
color = Color( 0.658824, 0.658824, 0.658824, 1 )

[node name="Modules" type="Control" parent="HUD/BuildMenu/NinePatchRect"]
margin_top = 192.0
margin_right = 384.0
margin_bottom = 320.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HUD/BuildMenu/NinePatchRect/Modules"]
margin_right = 121.0
margin_bottom = 32.0
text = "Modules"
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/BuildMenu/NinePatchRect/Modules"]
margin_top = 32.0
margin_right = 384.0
margin_bottom = 96.0
custom_constants/separation = 8
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="HUD/BuildMenu/NinePatchRect/Modules/HBoxContainer"]
margin_left = 16.0
margin_right = 80.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
color = Color( 0.658824, 0.658824, 0.658824, 1 )

[node name="ColorRect2" type="ColorRect" parent="HUD/BuildMenu/NinePatchRect/Modules/HBoxContainer"]
margin_left = 88.0
margin_right = 152.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
color = Color( 0.658824, 0.658824, 0.658824, 1 )

[node name="ColorRect3" type="ColorRect" parent="HUD/BuildMenu/NinePatchRect/Modules/HBoxContainer"]
margin_left = 160.0
margin_right = 224.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
color = Color( 0.658824, 0.658824, 0.658824, 1 )

[node name="ColorRect4" type="ColorRect" parent="HUD/BuildMenu/NinePatchRect/Modules/HBoxContainer"]
margin_left = 232.0
margin_right = 296.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
color = Color( 0.658824, 0.658824, 0.658824, 1 )

[node name="ColorRect5" type="ColorRect" parent="HUD/BuildMenu/NinePatchRect/Modules/HBoxContainer"]
margin_left = 304.0
margin_right = 368.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
color = Color( 0.658824, 0.658824, 0.658824, 1 )

[node name="Designators" type="Control" parent="HUD/BuildMenu/NinePatchRect"]
margin_top = 320.0
margin_right = 384.0
margin_bottom = 448.0

[node name="Label" type="Label" parent="HUD/BuildMenu/NinePatchRect/Designators"]
margin_right = 121.0
margin_bottom = 32.0
text = "Designators"
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/BuildMenu/NinePatchRect/Designators"]
margin_top = 32.0
margin_right = 384.0
margin_bottom = 96.0
custom_constants/separation = 8
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="HUD/BuildMenu/NinePatchRect/Designators/HBoxContainer"]
margin_left = 16.0
margin_right = 80.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
color = Color( 0.658824, 0.658824, 0.658824, 1 )

[node name="ColorRect2" type="ColorRect" parent="HUD/BuildMenu/NinePatchRect/Designators/HBoxContainer"]
margin_left = 88.0
margin_right = 152.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
color = Color( 0.658824, 0.658824, 0.658824, 1 )

[node name="ColorRect3" type="ColorRect" parent="HUD/BuildMenu/NinePatchRect/Designators/HBoxContainer"]
margin_left = 160.0
margin_right = 224.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
color = Color( 0.658824, 0.658824, 0.658824, 1 )

[node name="ColorRect4" type="ColorRect" parent="HUD/BuildMenu/NinePatchRect/Designators/HBoxContainer"]
margin_left = 232.0
margin_right = 296.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
color = Color( 0.658824, 0.658824, 0.658824, 1 )

[node name="ColorRect5" type="ColorRect" parent="HUD/BuildMenu/NinePatchRect/Designators/HBoxContainer"]
margin_left = 304.0
margin_right = 368.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
color = Color( 0.658824, 0.658824, 0.658824, 1 )

[node name="Selected" type="Control" parent="HUD/BuildMenu/NinePatchRect"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -64.0
margin_right = 384.0

[node name="Label" type="Label" parent="HUD/BuildMenu/NinePatchRect/Selected"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -7.0
margin_right = 76.0
margin_bottom = 7.0
text = "SELECTED: X"
valign = 1

[node name="Selector" type="TextureRect" parent="HUD/BuildMenu/NinePatchRect"]
margin_left = 16.0
margin_top = 96.0
margin_right = 80.0
margin_bottom = 160.0
mouse_filter = 2
texture = ExtResource( 11 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect2" type="NinePatchRect" parent="HUD/BuildMenu"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -224.0
margin_bottom = 384.0
texture = ExtResource( 10 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Placeables" type="Control" parent="HUD/BuildMenu/NinePatchRect2"]
margin_top = 96.0
margin_right = 224.0
margin_bottom = 232.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="HUD/BuildMenu/NinePatchRect2/Placeables"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_right = -8.0
custom_constants/vseparation = 8
custom_constants/hseparation = 8
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="HUD/BuildMenu/NinePatchRect2/Placeables/GridContainer"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
color = Color( 0.658824, 0.658824, 0.658824, 1 )

[node name="ColorRect2" type="ColorRect" parent="HUD/BuildMenu/NinePatchRect2/Placeables/GridContainer"]
margin_left = 72.0
margin_right = 136.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
color = Color( 0.658824, 0.658824, 0.658824, 1 )

[node name="ColorRect3" type="ColorRect" parent="HUD/BuildMenu/NinePatchRect2/Placeables/GridContainer"]
margin_left = 144.0
margin_right = 208.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
color = Color( 0.658824, 0.658824, 0.658824, 1 )

[node name="ColorRect4" type="ColorRect" parent="HUD/BuildMenu/NinePatchRect2/Placeables/GridContainer"]
margin_top = 72.0
margin_right = 64.0
margin_bottom = 136.0
rect_min_size = Vector2( 64, 64 )
color = Color( 0.658824, 0.658824, 0.658824, 1 )

[node name="ColorRect5" type="ColorRect" parent="HUD/BuildMenu/NinePatchRect2/Placeables/GridContainer"]
margin_left = 72.0
margin_top = 72.0
margin_right = 136.0
margin_bottom = 136.0
rect_min_size = Vector2( 64, 64 )
color = Color( 0.658824, 0.658824, 0.658824, 1 )

[node name="ColorRect6" type="ColorRect" parent="HUD/BuildMenu/NinePatchRect2/Placeables/GridContainer"]
margin_left = 144.0
margin_top = 72.0
margin_right = 208.0
margin_bottom = 136.0
rect_min_size = Vector2( 64, 64 )
color = Color( 0.658824, 0.658824, 0.658824, 1 )

[node name="Label" type="Label" parent="HUD/BuildMenu/NinePatchRect2/Placeables"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 4.0
margin_right = 192.0
text = "SELECTED: X"

[node name="Selector" type="TextureRect" parent="HUD/BuildMenu/NinePatchRect2"]
margin_left = 8.0
margin_top = 96.0
margin_right = 72.0
margin_bottom = 160.0
mouse_filter = 2
texture = ExtResource( 11 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect3" type="NinePatchRect" parent="HUD/BuildMenu"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -224.0
margin_top = -152.0
texture = ExtResource( 10 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRectUp" type="ColorRect" parent="HUD/BuildMenu/NinePatchRect3"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -32.0
margin_top = 8.0
margin_right = 32.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
color = Color( 0.658824, 0.658824, 0.658824, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="HUD/BuildMenu/NinePatchRect3/ColorRectUp"]
anchor_right = 1.0
anchor_bottom = 1.0
expand = true

[node name="ColorRectDown" type="ColorRect" parent="HUD/BuildMenu/NinePatchRect3"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -32.0
margin_top = -72.0
margin_right = 32.0
margin_bottom = -8.0
rect_min_size = Vector2( 64, 64 )
color = Color( 0.658824, 0.658824, 0.658824, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="HUD/BuildMenu/NinePatchRect3/ColorRectDown"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_rotation = 180.0
rect_pivot_offset = Vector2( 32, 32 )
expand = true

[node name="ColorRectLeft" type="ColorRect" parent="HUD/BuildMenu/NinePatchRect3"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 8.0
margin_top = -32.0
margin_right = 64.0
margin_bottom = 32.0
rect_min_size = Vector2( 64, 64 )
color = Color( 0.658824, 0.658824, 0.658824, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="HUD/BuildMenu/NinePatchRect3/ColorRectLeft"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_rotation = -90.0
rect_pivot_offset = Vector2( 32, 32 )
expand = true
flip_h = true

[node name="ColorRectRight" type="ColorRect" parent="HUD/BuildMenu/NinePatchRect3"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -72.0
margin_top = -32.0
margin_right = -8.0
margin_bottom = 32.0
rect_min_size = Vector2( 64, 64 )
color = Color( 0.658824, 0.658824, 0.658824, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="HUD/BuildMenu/NinePatchRect3/ColorRectRight"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_rotation = 90.0
rect_pivot_offset = Vector2( 32, 32 )
expand = true

[node name="Selector" type="TextureRect" parent="HUD/BuildMenu/NinePatchRect3"]
margin_left = 80.0
margin_top = 8.0
margin_right = 144.0
margin_bottom = 72.0
texture = ExtResource( 11 )
expand = true

[node name="PlayerPanels" type="TabContainer" parent="HUD"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -256.0
margin_right = 400.0
margin_bottom = 256.0
tab_align = 0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Character" type="Control" parent="HUD/PlayerPanels"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Inventory" parent="HUD/PlayerPanels" instance=ExtResource( 8 )]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
dev_dimensions = Vector2( 11, 3 )
invPath = NodePath("../../../Planet/Characters/Player/Inventory")

[node name="Map" type="Control" parent="HUD/PlayerPanels"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="Menu" type="Control" parent="HUD/PlayerPanels"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 7 )

[node name="Quit_Button" type="Button" parent="HUD/PlayerPanels/Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -16.0
margin_right = 64.0
margin_bottom = 16.0
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InspectPopup" type="Popup" parent="HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="NinePatchRect" type="NinePatchRect" parent="HUD/InspectPopup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -20.0
margin_right = 128.0
margin_bottom = 20.0
texture = ExtResource( 10 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Label" type="Label" parent="HUD/InspectPopup/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ObjectInteraction" type="Popup" parent="HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -256.0
margin_right = 400.0
margin_bottom = 256.0
script = ExtResource( 12 )

[node name="ObjectInterfaces" type="Control" parent="HUD/ObjectInteraction"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -400.0
margin_right = 400.0
margin_bottom = 240.0

[node name="NinePatchRect" type="NinePatchRect" parent="HUD/ObjectInteraction/ObjectInterfaces"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
texture = ExtResource( 10 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventoryMotif" parent="HUD/ObjectInteraction/ObjectInterfaces" instance=ExtResource( 8 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 0.0

[node name="TakeAll" type="Button" parent="HUD/ObjectInteraction/ObjectInterfaces"]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -32.0
margin_right = 128.0
text = "Take All"

[node name="PlayerInterfaces" type="Control" parent="HUD/ObjectInteraction"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -400.0
margin_top = -240.0
margin_right = 400.0

[node name="NinePatchRect" type="NinePatchRect" parent="HUD/ObjectInteraction/PlayerInterfaces"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
texture = ExtResource( 10 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="InventoryMotif" parent="HUD/ObjectInteraction/PlayerInterfaces" instance=ExtResource( 8 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 0.0
invPath = NodePath("../../../../Planet/Characters/Player/Inventory")
[connection signal="tab_changed" from="HUD/PlayerPanels" to="HUD/PlayerPanels" method="_on_PlayerPanels_tab_changed"]
[connection signal="pressed" from="HUD/PlayerPanels/Menu/Quit_Button" to="HUD/PlayerPanels/Menu" method="_on_Quit_Button_pressed"]
[connection signal="popup_hide" from="HUD/ObjectInteraction" to="HUD/ObjectInteraction" method="_on_ObjectInteraction_popup_hide"]
[connection signal="lclick_item" from="HUD/ObjectInteraction/ObjectInterfaces/InventoryMotif" to="HUD/ObjectInteraction" method="_on_Object_Inv_LC"]
[connection signal="rclick_item" from="HUD/ObjectInteraction/ObjectInterfaces/InventoryMotif" to="HUD/ObjectInteraction" method="_on_Object_Inv_RC"]
[connection signal="pressed" from="HUD/ObjectInteraction/ObjectInterfaces/TakeAll" to="HUD/ObjectInteraction" method="_on_TakeAll_pressed"]

[editable path="Planet"]

[editable path="Planet/Characters/Player"]
